fixed spacing for caption

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -125,8 +125,6 @@ header {
   display: flex;
   align-items: center;
 
-  margin-bottom: 24px;
-
   .since {
     &::before {
       display: inline-block;
@@ -148,7 +146,11 @@ header {
   color: $tertiary-text-color;
   font-size: 14px;
   line-height: 1.5em;
-  margin-bottom: 24px;
+  margin: 24px 0;
+
+  &.no-indicator::after {
+    display: none;
+  }
 
   &.collapsed {
     .ellipses {
@@ -162,6 +164,10 @@ header {
     &::after {  
       content: "Read More";
     }
+  }
+
+  &:empty {
+    display: none;
   }
 
   &::after {
